tests/src/frontend/typechecking/invalid/overridable_algebraic_7.sk
base class L {
  fun foo(): void
  | B _ -> void
}
base class R {
  fun foo(): void
  | A _ -> void
}
class A() extends L, R
class B() extends L, R
